Adds dot-env for environment variables loading in development.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,4 @@
-# Add account credentials and API keys here.
-# This file should be listed in .gitignore to keep your settings secret!
-# Each entry sets a local environment variable.
-# For example, setting:
-# GMAIL_USERNAME=Your_Gmail_Username
-# makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
-
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=your_db_username
+DB_PASSWORD=your_password
